Add skeleton for Help button and Help tab in settings

--- a/source/site/frontend/html/timer.html
+++ b/source/site/frontend/html/timer.html
@@ -69,10 +69,13 @@
           <div class="task">
             <span id="current-task">Example Task</span>
           </div>
-        </div>
 
-        <!-- should play when work and break cycles end
-        <audio id="alarm-sound" src="/assets/audio/spongebob-screaming-alarm-placeholder.mp3"></audio> -->
+          <div class="help">
+            <!-- TODO: Link directly to Help tab in settings -->
+            <c-control-button id="help-button" class="finish" onclick="null">Help</c-control-button>
+          </div>
+
+        </div>
       </main>
     </div>
     <footer>
