link help button to settings #77

--- a/source/site/frontend/html/timer.html
+++ b/source/site/frontend/html/timer.html
@@ -72,7 +72,10 @@
 
           <div class="help">
             <!-- TODO: Link directly to Help tab in settings -->
-            <c-control-button id="help-button" class="finish" onclick="null">Help</c-control-button>
+            <c-control-button id="help-button" class="finish" onclick="
+            transition(window.statelet, 'timer_open_settings');
+            document.getElementById('c-settings').switch_tab(2);
+            ">Help</c-control-button>
           </div>
 
         </div>
