--- a/source/site/frontend/html/timer.html
+++ b/source/site/frontend/html/timer.html
@@ -91,6 +91,10 @@
       >
     </footer>
 
+    <!-- External Dependencies -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.4.0/showdown.min.js"></script>
+
+    <!-- Internal Dependencies -->
     <script type="module" src="/js/timer.js"></script>
   </body>
 </html>
