--- a/source/site/frontend/html/timer.html
+++ b/source/site/frontend/html/timer.html
@@ -95,6 +95,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.4.0/showdown.min.js"></script>
 
     <!-- Internal Dependencies -->
-    <script type="module" src="/js/timer.js"></script>
+    <script type="module" src="/js-trans/timer.js"></script>
   </body>
 </html>
