Fix refreshing while tasklist is open and finalize some things for deployment

--- a/source/site/frontend/html/timer.html
+++ b/source/site/frontend/html/timer.html
@@ -67,7 +67,7 @@
             >
           </div>
           <div class="task">
-            <span id="current-task">Example Task</span>
+            <span id="current-task">Waiting to load task...</span>
           </div>
 
           <div class="help">
