--- a/source/site/frontend/html/timer.html
+++ b/source/site/frontend/html/timer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link
       rel="SHORTCUT ICON"
-      href="/assets/images/doodle-bob-background-placeholder.jpg"
+      href="/assets/images/page-icon.png"
     />
     <link rel="stylesheet" href="/css/timer.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
