--- a/source/site/frontend/html/timer.html
+++ b/source/site/frontend/html/timer.html
@@ -25,7 +25,7 @@
           >
           <c-control-button id="tasklist-btn"
             onclick="(window.statelet().current == 'timer_toggle_task_list') ? 
-            rev_transition(window.statelet(), 'timer_toggle_task_list'):
+            rev_transition(window.statelet()):
             transition(window.statelet(), 'timer_toggle_task_list')"
             >Tasklist</c-control-button
           >
